other-mpol/add-env-vars-from-cm/.chainsaw-test/podcontroller-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: pod01-01-init
        image: nginx:latest
        envFrom:
        - configMapRef:
            name: nsenvvars
      - name: pod01-02-init
        image: nginx:latest
        envFrom:
        - configMapRef:
            name: nsenvvars
      containers:
      - name: pod01-01
        image: nginx:latest
        envFrom:
        - configMapRef:
            name: nsenvvars
      - name: pod01-02
        image: nginx:latest
        envFrom:
        - configMapRef:
            name: nsenvvars
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: pod01-01-init
            image: nginx:latest
            envFrom:
            - configMapRef:
                name: nsenvvars
          - name: pod01-02-init
            image: nginx:latest
            envFrom:
            - configMapRef:
                name: nsenvvars
          containers:
          - name: pod01-01
            image: nginx:latest
            envFrom:
            - configMapRef:
                name: nsenvvars
          - name: pod01-02
            image: nginx:latest
            envFrom:
            - configMapRef:
                name: nsenvvars
          restartPolicy: OnFailure
